# libgff

./: CMakeLists.txt  LICENSE  README.md  build.zig  makefile  premake5.lua
.github/: workflows
.github/workflows/: test.yml
ext/: CMakeLists.txt
include/: char.h  common.h  gff.h  gpl.h  manager.h  map.h  state.h  var.h  xmi.h
include/gff/: char.h  common.h  debug.h  gff.h  gfftypes.h  gpl.h  gui.h  image.h  item.h  lua.h  manager.h  map.h  name.h  object.h  port.h  psionic.h  rdff.h  region.h  scmd.h  status.h  str.h
include/gpl/: gpl.h  manager.h  state.h  string.h  var.h
src/: CMakeLists.txt  char.c  debug.c  gff.c  gfftypes.c  gui.c  image.c  item.c  manager.c  map.c  name.c  object.c  rdff.c  region.c  scmd.c  xmi.c
src/gpl/: gpl.c  manager.c  parse.c  state.c  string.c
test/: CMakeLists.txt  append-gff-test.c  ds1-basic.c  ds1-gpldata.c  ds1-image.c  ds1-manager.c  ds1-map.c  ds1-region.c  ds1-resource.c  ds1-segobjex.c  gff-test.c
tools/: CMakeLists.txt  gffmod-print.c  gffmod-write.c  gffmod.c  gfftool-print.c  gfftool.c
